fix(vertical-filmstrip): no scrollbars on Firefox from single thumbnail
Something is causing firefox to show scrollbars on the remote videos
container even though there is plenty of room. I lost this battle
and just made the container taller...

--- a/css/_vertical_filmstrip_overrides.scss
+++ b/css/_vertical_filmstrip_overrides.scss
@@ -100,6 +100,11 @@
 
             #filmstripRemoteVideosContainer {
                 flex-direction: column-reverse;
+                /**
+                 * Add padding as a hack for Firefox not to show scrollbars when
+                 * unnecessary.
+                 */
+                padding: 1px 0;
                 overflow-x: hidden;
             }
         }
